# KeyPath

./: .gitignore  .gitleaksignore  .gitmodules  .last_build_output.txt  .mcp.json  .nojekyll  .push_pages_status  .swiftformat  .swiftlint-baseline.yml  .swiftlint.yml  .watchmanconfig  ACCESSIBILITY_COVERAGE.md  AGENTS.md  ARCHITECTURE.md  ASSESSMENT.md  BACKLOG.md  BACKUPFIX.md  BUILD_STATUS.md  CGEVENT_TAP_CLEANUP_PLAN.md  CHANGELOG.md  CI_UPDATE_SUMMARY.md  CLAUDE.md  CLEANUP-PLAN.md  CODEBASE_ANALYSIS_2025-10-23.md  CODE_AUDIT.md  CODE_OF_CONDUCT.md  CONSOLIDATE.md  CONTEXT.md  CONTINUE.md  CONTRIBUTING.md  DECISION_MODULE_SPLIT_REVERT.md  DEPLOYMENT_PASSWORD_FIX.md  DIAGNOSTICS.md  FUTURECLEANUP.md  Gemfile  IMPROVEPLAN.md  INPUT_MONITORING_FIX.md  INSTALLER-IMPROVEMENT.md  ISSUE_48_FIX_SUMMARY.md  KANATA_DEBUGGING_PROGRESS.md  (+178 more)
.build/: build.db  plugin-tools.yaml  release.yaml
.build-ci/: build.db  debug.yaml  plugin-tools.yaml
.build-karabiner/: build.db  debug.yaml
.crush/: crush.db-shm  crush.db-wal
.cursor/: mcp.json
.logs/: build-app-2.txt  build-app-after-split.txt  build-app.txt  build-cli-2.txt  build-cli-after-split.txt  build-cli.txt  build-core-2.txt  build-core-after-split.txt  build-core.txt  build-keypath-j1.txt  build-keypath-quick.txt  build-keypath-verbose.txt  build-product-app.txt  build-product-cli.txt
KeyPath/: AnthropicModelProvider.swift  (+7 more)
KeyPath.xcodeproj/: project.pbxproj
Rust/KeyPathKanataHostBridge/: Cargo.toml
Rust/KeyPathKanataHostBridge/include/: keypath_kanata_host_bridge.h
Rust/KeyPathKanataHostBridge/src/: lib.rs
(+12110 files in other folders)
